--- a/calculatorV3/calculator.html
+++ b/calculatorV3/calculator.html
@@ -9,26 +9,26 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input  type="text" id="inputText" placeholder="0">
-            <button class="clear" name="data-clear">C</button>
+            <input  type="text" id="inputText" data-testid="display" value="0">
+            <button class="clear" name="data-clear" data-testid="C">C</button>
             <button name="data-del">DEL</button>
-            <button name="data-sign">+/-</button>
-            <button name="data-number">1</button>
-            <button name="data-number">2</button>
-            <button name="data-number">3</button>
-            <button name="data-opera">/</button>
-            <button name="data-number">4</button>
-            <button name="data-number">5</button>
-            <button name="data-number">6</button>
-            <button name="data-opera">*</button>
-            <button name="data-number">7</button>
-            <button name="data-number">8</button>
-            <button name="data-number">9</button>
-            <button name="data-opera">-</button>
-            <button name="data-number">0</button>
-            <button name="data-point">.</button>
-            <button name="data-equal">=</button>
-            <button name="data-opera">+</button>
+            <button name="data-sign" data-testid="+-">+/-</button>
+            <button name="data-number" data-testid="1">1</button>
+            <button name="data-number" data-testid="2">2</button>
+            <button name="data-number" data-testid="3">3</button>
+            <button name="data-opera" data-testid="/">/</button>
+            <button name="data-number" data-testid="4">4</button>
+            <button name="data-number" data-testid="5">5</button>
+            <button name="data-number" data-testid="6">6</button>
+            <button name="data-opera" data-testid="*">*</button>
+            <button name="data-number" data-testid="7">7</button>
+            <button name="data-number" data-testid="8">8</button>
+            <button name="data-number" data-testid="9">9</button>
+            <button name="data-opera" data-testid="-">-</button>
+            <button name="data-number" data-testid="0">0</button>
+            <button name="data-point" data-testid=".">.</button>
+            <button name="data-equal" data-testid="=">=</button>
+            <button name="data-opera" data-testid="+">+</button>
         </div>
     </div>
 <script src="script.js"></script>
